<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <GVL Name="GVL_SerialComunication" Id="{4694bfb4-7eb5-41fc-b223-5a47b80b6d6f}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	//背景通信模块
	BMSSerialCtrl		:SerialLineControl;
	pComIn				:PcComInData;
	pComOut				:PcComOutData;
	TxBuffer			:combuffer;
	RxBuffer			:combuffer;
	
	// 
	
	//查询命令
	queryBmsStatusCmd			:ARRAY[1..7] OF BYTE	:=[16#DD, 16#A5, 16#03, 16#00, 16#FF, 16#FD, 16#77];
	queryBmsStatusCmdLen		:INT					:=7;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>